# sichgatecli

./: .gitignore  LICENSE  README.md  setup.py
sichgate/: LICENSE  MANIFEST.in  README.md  cli.py  pyproject.toml  readme
tests/: test_data_poisoning.py  test_function_auth.py  test_llm_decisions.py  test_multimodal.py  test_rag_injection.py  vulnerable_app.py
