# ============================================================
# pyproject.toml
# ============================================================
"""
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sichgate"
version = "0.1.0"
description = "AI security auditing tool for startups"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Polina Moshenets @ SichGate Team", email = "polina@sichgate.com"}
]
keywords = ["security", "ai", "llm", "audit", "pentesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
full = ["pytector>=0.1.0"]
dev = ["pytest>=7.0.0", "black>=23.0.0", "flake8>=6.0.0"]

[project.scripts]
sichgate = "sichgate.cli:main"

[project.urls]
Homepage = "https://sichgate.dev"
Documentation = "https://sichgate.dev/docs"
Repository = "https://github.com/yourusername/sichgate"
"""